# voxel-world

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONVENTIONS.md  README.md  d3d12-engine-roadmap.md  vcpkg.json
.github/workflows/: ci.yml
engine/core/: CMakeLists.txt  assert.h  log.cpp  log.h  time.cpp  time.h
engine/platform/: CMakeLists.txt  input.cpp  input.h  platform.cpp  platform.h  window.cpp  window.h
engine/renderer/: CMakeLists.txt
engine/rhi/: CMakeLists.txt
game/: CMakeLists.txt  main.cpp
